--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.2",
+    "@prisma/client": "^6.4.1",
     "next": "15.2.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
