feat: Add Clerk webhook integration and user synchronization
- Install Svix for webhook handling
- Update Prisma schema to support Clerk user synchronization
- Create webhook route for user creation, update, and deletion events
- Add middleware to allow webhook routes
- Create sample event page with user authentication
- Add global types for Prisma client

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.2.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "svix": "^1.61.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
