--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.477.0",
+    "motion": "^12.4.10",
     "next": "15.2.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
