--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "lucide-react": "^0.477.0",
     "motion": "^12.4.10",
     "next": "15.2.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.1",
     "svix": "^1.61.1",
     "tailwind-merge": "^3.0.2",
     "zod": "^3.24.2"
