--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "sonner": "^2.0.1",
     "svix": "^1.61.1",
     "tailwind-merge": "^3.0.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
