--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
+NEXT_PUBLIC_BASE_URL=
+
 # Clerk
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+SIGNING_SECRET=
 NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=
 NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=
 NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=
 NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=
-CLERK_SECRET_KEY=
-SIGNING_SECRET=
 FORWARDING_URL=
 
 # Mongodb
